--- a/Inverse/Data_Prep.ipynb
+++ b/Inverse/Data_Prep.ipynb
@@ -112,7 +112,7 @@
     "        for i in range(Nt):\n",
     "            for j in range(nfl):\n",
     "                for k in range(ndir):\n",
-    "                    corr_boot[b][c][i][j][k] = corr_2[c][i][j][k]"
+    "                    corr_boot[b][c][i][j][k] = corr_2[b_index[b][c][]][i][j][k]"
    ]
   },
   {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "id": "82a2ebc6",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "id": "7000b620",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
        "<ErrorbarContainer object of 3 artists>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -224,6 +224,14 @@
     "t = np.array(range(0,Nt,1))\n",
     "plt.errorbar(t, cmean, yerr=csigma, fmt='r--', label='fit')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "701b88ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
