--- a/Inverse/Data_Prep.ipynb
+++ b/Inverse/Data_Prep.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "id": "82a2ebc6",
    "metadata": {},
    "outputs": [
@@ -149,9 +149,9 @@
       "(1000, 10)\n",
       "[-0.06534811 -0.02358882 -0.00288968 -0.00231961 -0.00045018 -0.00108566\n",
       " -0.00045349 -0.00231903 -0.00289855 -0.02357197]\n",
-      "[1.57415540e-10 5.70160211e-11 2.19598897e-11 2.09690612e-11\n",
-      " 1.09600314e-11 1.43167063e-11 1.25274079e-11 1.90711748e-11\n",
-      " 2.21733086e-11 5.64757005e-11]\n"
+      "[1.25465350e-05 7.55089538e-06 4.68613804e-06 4.57919875e-06\n",
+      " 3.31059381e-06 3.78374236e-06 3.53940785e-06 4.36705562e-06\n",
+      " 4.70885428e-06 7.51503164e-06]\n"
      ]
     }
    ],
@@ -178,7 +178,7 @@
     "    return sum(arr)/len(arr)\n",
     "def std_dev(arr):\n",
     "    arr_mean = mean(arr)\n",
-    "    return (sum([(i - arr_mean)**2 for i in arr]) / (len(arr)-1))\n",
+    "    return (sum([(i - arr_mean)**2 for i in arr]) / (len(arr)-1))**0.5\n",
     "\n",
     "cmean = np.zeros(10)\n",
     "csigma = np.zeros(10)\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "id": "7000b620",
    "metadata": {},
    "outputs": [
